reorganized the repository structure to have one version of the code for intarfacing an arduino with a lora board and one for the Akeru board integrating Sigfox

--- a/lora/Makefile
+++ b/lora/Makefile
@@ -1,4 +1,6 @@
 
+USER_LIB_PATH=$(shell pwd)/../libraries
+
 BOARD_TAG    = uno
 ARDUINO_LIBS = SoftwareSerial Akeru TinyGPS
 ARDUINO_PORT = /dev/ttyUSB0
