modified lora code to communicate with lora board

--- a/lora/Makefile
+++ b/lora/Makefile
@@ -2,7 +2,7 @@
 USER_LIB_PATH=$(shell pwd)/../libraries
 
 BOARD_TAG    = uno
-ARDUINO_LIBS = SoftwareSerial Akeru TinyGPS
+ARDUINO_LIBS = SoftwareSerial TinyGPS
 ARDUINO_PORT = /dev/ttyUSB0
 MONITOR_PORT = /dev/ttyUSB0
 
